2008-03-08  Andreia Gaita  <avidigal@novell.com>

	* MonoWebBrowserHtmlRender.cs, 
	  BrowserWidget.cs,
	  Makefile.am: Mono.Mozilla backend

	* IHtmlRender.cs, 
	  GeckoHtmlRender.cs, 
	  GtkHtmlHtmlRender.cs, 
	  WebKitHtmlRender.cs: Support for checking backend capabilities. Added 
	  Initialize method to detect if the backend is functional on load.

	* browser.cs: Take out --no-gecko option, and add instead a --engine option, 
	  taking an engine name (equivalent to IHtmlRender.Name). Scan the filesystem 
      for assemblies that can be loaded as backends, load the requested engine or
      fallback to GtkHtml. Remove UseGecko checks and use the backend Capabilities
	  flags instead.

2008-03-07  Alp Toker  <alp@nuanti.com>

	* WebKitHtmlRender.cs:
	* Makefile.am:
	* browser.cs: Initial WebKit backend for monodoc (not enabled yet).

2008-03-03  Wade Berrier  <wberrier@novell.com>

	* Makefile.am: Use gmcs to build, as monodoc is migrating to gmcs.

2008-01-16  Wade Berrier  <wberrier@novell.com>

	* monodoc.desktop.in: no extension on icon, remove
	'Application' from Categories.  (standards enforced by rpmlint)

2007-12-12  Jonathan Pryor  <jonpryor@vt.edu>

	* GtkHtmlHtmlRender.cs: Hack: "fix" the URLs retrieved from GTKHTML --
	  s/&lt;/</g, s/&gt;/>/g -- so that the engine can properly lookup generic
	  types.

2007-11-23  Mario Sopena <mario.sopena@gmail.com>

	* browser.cs: 
	  - fix #324305. Now, when search results panel lost focus,
	    unselects the selected search result
	  - fix #322097. Solution based on the patch provided 
	    by gabriel.burt@gmail.com
	  - Use CSS when gecko is used as renderer
	

2007-11-15  Wade Berrier  <wberrier@novell.com>

	* monodoc.in: force --no-gecko because xulrunner crashes on some distros
	(See https://bugzilla.novell.com/show_bug.cgi?id=341815 )

2007-11-09  Wade Berrier  <wberrier@novell.com>

	* AssemblyInfo.cs.in: use TOOLS_VERSION because it is
	in an mcs friendly format (for svn revisions)
