@@ -48,7 +48,8 @@ case x$1 in
 	echo "  --html TOPIC       	Print the HTML contents of TOPIC"
 	echo "  --make-index       	Create the documentation index"
  	echo "  --make-search-index	Create the searchable documentation index"
-	echo "  --no-gecko         	Don't use Mozilla to render the contents"
+	echo "  --engine          	Select a browser backend"
+	echo "                    	(Gecko, GtkHtml, WebKit, MonoWebBrowser)"
 	echo
 	echo "The following options are available for authoring documentation:"
 	echo "  --assemble         Runs the doc assembler"
@@ -98,5 +99,5 @@ export MOZILLA_FIVE_HOME
 export MOZILLA_HOME 
 export LD_LIBRARY_PATH
 
-# force '--no-gecko' because xulrunner is crashing on some browsers (bug #341815)
-exec @RUNTIME@ $monodocdir/browser.exe --no-gecko $OPTIONS "$@" $REST
+# force GtkHtml because xulrunner is crashing on some browsers (bug #341815)
+exec @RUNTIME@ $monodocdir/browser.exe --engine GtkHtml $OPTIONS "$@" $REST
