@@ -1,3 +1,8 @@
+2008-03-08  Alp Toker  <alp@nuanti.com>
+
+	* monodoc.in: Remove obsolete --no-gecko in launcher script and document the
+	new --engine flag.
+
 2008-03-08  Andreia Gaita  <avidigal@novell.com>
 
 	* MonoWebBrowserHtmlRender.cs, 
